# witnesscalc-template

./: CMakeLists.txt  README.md  build_gmp.sh  run_tests.sh  test.sh
.github/workflows/: build.yml
cmake/: platform.cmake
src/: CMakeLists.txt  calcwit.cpp  calcwit.hpp  circom.hpp  main.cpp  witnesscalc.cpp  witnesscalc.h  witnesscalc_circuit.h.in  witnessclc_circuit.cpp.in
